deploy/sealos/cloud/xpod-redis.yaml
{
  "apiVersion": "apps/v1",
  "kind": "StatefulSet",
  "metadata": {
    "labels": {
      "app": "xpod-redis"
    },
    "name": "xpod-redis",
    "namespace": "ns-iknkxtc8"
  },
  "spec": {
    "persistentVolumeClaimRetentionPolicy": {
      "whenDeleted": "Retain",
      "whenScaled": "Retain"
    },
    "podManagementPolicy": "OrderedReady",
    "replicas": 1,
    "revisionHistoryLimit": 10,
    "selector": {
      "matchLabels": {
        "app": "xpod-redis"
      }
    },
    "serviceName": "xpod-redis",
    "template": {
      "metadata": {
        "labels": {
          "app": "xpod-redis"
        }
      },
      "spec": {
        "containers": [
          {
            "args": [
              "exec redis-stack-server --requirepass \"$REDIS_PASSWORD\" --appendonly yes --dir /data --save \"\""
            ],
            "command": [
              "sh",
              "-c"
            ],
            "env": [
              {
                "name": "REDIS_PASSWORD",
                "valueFrom": {
                  "secretKeyRef": {
                    "key": "REDIS_PASSWORD",
                    "name": "xpod-redis-secret"
                  }
                }
              }
            ],
            "image": "redis/redis-stack-server:7.2.0-v14",
            "imagePullPolicy": "IfNotPresent",
            "name": "redis",
            "ports": [
              {
                "containerPort": 6379,
                "name": "redis",
                "protocol": "TCP"
              }
            ],
            "readinessProbe": {
              "exec": {
                "command": [
                  "sh",
                  "-c",
                  "redis-cli -a \"$REDIS_PASSWORD\" --no-auth-warning ping | grep -q PONG"
                ]
              },
              "failureThreshold": 3,
              "initialDelaySeconds": 5,
              "periodSeconds": 5,
              "successThreshold": 1,
              "timeoutSeconds": 1
            },
            "resources": {
              "limits": {
                "cpu": "100m",
                "memory": "128Mi"
              },
              "requests": {
                "cpu": "100m",
                "memory": "128Mi"
              }
            },
            "securityContext": {
              "allowPrivilegeEscalation": false,
              "capabilities": {
                "drop": [
                  "ALL"
                ]
              }
            },
            "terminationMessagePath": "/dev/termination-log",
            "terminationMessagePolicy": "File",
            "volumeMounts": [
              {
                "mountPath": "/data",
                "name": "data"
              }
            ]
          }
        ],
        "dnsPolicy": "ClusterFirst",
        "restartPolicy": "Always",
        "schedulerName": "default-scheduler",
        "securityContext": {
          "fsGroup": 999,
          "runAsNonRoot": true,
          "runAsUser": 999,
          "seccompProfile": {
            "type": "RuntimeDefault"
          }
        },
        "terminationGracePeriodSeconds": 30
      }
    },
    "updateStrategy": {
      "rollingUpdate": {
        "partition": 0
      },
      "type": "RollingUpdate"
    },
    "volumeClaimTemplates": [
      {
        "apiVersion": "v1",
        "kind": "PersistentVolumeClaim",
        "metadata": {
          "name": "data"
        },
        "spec": {
          "accessModes": [
            "ReadWriteOnce"
          ],
          "resources": {
            "requests": {
              "storage": "2Gi"
            }
          },
          "storageClassName": "openebs-lvmpv",
          "volumeMode": "Filesystem"
        }
      }
    ]
  }
}
