deploy/sealos/cloud/xpod-redis-service.yaml
{
  "apiVersion": "v1",
  "kind": "Service",
  "metadata": {
    "labels": {
      "app": "xpod-redis"
    },
    "name": "xpod-redis",
    "namespace": "ns-iknkxtc8"
  },
  "spec": {
    "clusterIP": "10.96.227.110",
    "clusterIPs": [
      "10.96.227.110"
    ],
    "internalTrafficPolicy": "Cluster",
    "ipFamilies": [
      "IPv4"
    ],
    "ipFamilyPolicy": "SingleStack",
    "ports": [
      {
        "name": "redis",
        "port": 6379,
        "protocol": "TCP",
        "targetPort": 6379
      }
    ],
    "selector": {
      "app": "xpod-redis"
    },
    "sessionAffinity": "None",
    "type": "ClusterIP"
  }
}
